Adjust perfect solve drop shadow on mobile

--- a/src/app/components/game/game.module.css
+++ b/src/app/components/game/game.module.css
@@ -94,4 +94,8 @@ because it was interfering with the positioning of the input element */
     .habitatMap {
       order: 0;
     }
+
+    .perfectPopup {
+      text-shadow: 1px 1px 2px #000;
+    }
 }
